--- a/package.json
+++ b/package.json
@@ -24,16 +24,19 @@
     "crypto": "^1.0.1",
     "csrf": "^3.1.0",
     "express-rate-limit": "^7.4.1",
+    "framer-motion": "^11.11.11",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.447.0",
     "next": "14.2.13",
     "next-auth": "^5.0.0-beta.25",
     "razorpay": "^2.9.4",
     "react": "^18",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18",
     "react-hook": "^0.0.1",
     "react-hook-form": "^7.53.1",
     "react-icons": "^5.3.0",
+    "react-use": "^17.5.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
