--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@upstash/redis": "^1.34.3",
+    "ai": "^4.0.13",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "crypto": "^1.0.1",
     "csrf": "^3.1.0",
+    "date-fns": "^3.6.0",
     "express-rate-limit": "^7.4.1",
     "framer-motion": "^11.11.11",
     "jsonwebtoken": "^9.0.2",
@@ -33,6 +36,7 @@
     "razorpay": "^2.9.4",
     "react": "^18",
     "react-confetti": "^6.1.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook": "^0.0.1",
     "react-hook-form": "^7.53.1",
@@ -40,6 +44,9 @@
     "react-use": "^17.5.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "@react-google-maps/api": "^2.19.3",
+    "@ai-sdk/openai": "^0.0.66",
+    "@googlemaps/google-maps-services-js": "^3.4.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
