--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^0.0.66",
     "@auth/prisma-adapter": "^2.5.3",
     "@edge-csrf/nextjs": "^2.5.2",
+    "@googlemaps/google-maps-services-js": "^3.4.0",
     "@hookform/resolvers": "^3.9.0",
     "@prisma/client": "^5.20.0",
     "@radix-ui/react-avatar": "^1.1.1",
@@ -20,6 +22,7 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@react-google-maps/api": "^2.19.3",
     "@upstash/redis": "^1.34.3",
     "ai": "^4.0.13",
     "class-variance-authority": "^0.7.0",
@@ -33,6 +36,7 @@
     "lucide-react": "^0.447.0",
     "next": "14.2.13",
     "next-auth": "^5.0.0-beta.25",
+    "openai": "^4.76.0",
     "razorpay": "^2.9.4",
     "react": "^18",
     "react-confetti": "^6.1.0",
@@ -44,9 +48,6 @@
     "react-use": "^17.5.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
-    "@react-google-maps/api": "^2.19.3",
-    "@ai-sdk/openai": "^0.0.66",
-    "@googlemaps/google-maps-services-js": "^3.4.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
