--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
     "@ai-sdk/openai": "^0.0.66",
     "@auth/prisma-adapter": "^2.5.3",
     "@edge-csrf/nextjs": "^2.5.2",
-
     "@googlemaps/google-maps-services-js": "^3.4.0",
-
     "@hookform/resolvers": "^3.9.0",
     "@prisma/client": "^5.20.0",
     "@radix-ui/react-avatar": "^1.1.1",
@@ -24,20 +22,18 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
-
     "@react-google-maps/api": "^2.19.3",
     "@upstash/redis": "^1.34.3",
     "ai": "^4.0.13",
-
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "crypto": "^1.0.1",
     "csrf": "^3.1.0",
-
     "date-fns": "^3.6.0",
-
+    "dompurify": "^3.2.3",
     "express-rate-limit": "^7.4.1",
     "framer-motion": "^11.11.11",
+    "html-react-parser": "^5.2.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.447.0",
     "next": "14.2.13",
@@ -46,14 +42,14 @@
     "razorpay": "^2.9.4",
     "react": "^18",
     "react-confetti": "^6.1.0",
-
     "react-day-picker": "^8.10.1",
-
     "react-dom": "^18",
     "react-hook": "^0.0.1",
     "react-hook-form": "^7.53.1",
     "react-icons": "^5.3.0",
+    "react-markdown": "^9.0.1",
     "react-use": "^17.5.1",
+    "remark-gfm": "^4.0.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
