--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "html-react-parser": "^5.2.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.447.0",
+    "mongoose": "^8.9.2",
     "next": "14.2.13",
     "next-auth": "^5.0.0-beta.25",
     "openai": "^4.76.0",
