--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@react-google-maps/api": "^2.19.3",
+    "@reduxjs/toolkit": "^2.5.0",
     "@upstash/redis": "^1.34.3",
     "ai": "^4.0.13",
     "class-variance-authority": "^0.7.0",
@@ -49,6 +50,7 @@
     "react-hook-form": "^7.53.1",
     "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1",
+    "react-redux": "^9.2.0",
     "react-use": "^17.5.1",
     "remark-gfm": "^4.0.0",
     "tailwind-merge": "^2.5.4",
@@ -61,6 +63,7 @@
     "@types/nodemailer": "^6.4.16",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-redux": "^7.1.34",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
     "postcss": "^8",
