--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.2",
+    "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.2",
     "@react-google-maps/api": "^2.19.3",
     "@reduxjs/toolkit": "^2.5.0",
     "@upstash/redis": "^1.34.3",
