--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@ai-sdk/openai": "^0.0.66",
     "@auth/prisma-adapter": "^2.5.3",
+    "@aws-sdk/client-s3": "^3.717.0",
+    "@aws-sdk/s3-presigned-post": "^3.717.0",
     "@edge-csrf/nextjs": "^2.5.2",
     "@googlemaps/google-maps-services-js": "^3.4.0",
     "@hookform/resolvers": "^3.9.0",
@@ -55,6 +57,7 @@
     "react-redux": "^9.2.0",
     "react-use": "^17.5.1",
     "remark-gfm": "^4.0.0",
+    "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
