--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@ai-sdk/openai": "^0.0.66",
     "@auth/prisma-adapter": "^2.5.3",
+    "@aws-sdk/client-s3": "^3.485.0",
+    "@aws-sdk/s3-presigned-post": "^3.485.0",
     "@edge-csrf/nextjs": "^2.5.2",
     "@googlemaps/google-maps-services-js": "^3.4.0",
     "@hookform/resolvers": "^3.9.0",
@@ -27,8 +29,6 @@
     "@react-google-maps/api": "^2.19.3",
     "@reduxjs/toolkit": "^2.5.0",
     "@upstash/redis": "^1.34.3",
-    "@aws-sdk/client-s3": "^3.485.0",
-    "@aws-sdk/s3-presigned-post": "^3.485.0",
     "ai": "^4.0.13",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -44,6 +44,7 @@
     "mongoose": "^8.9.2",
     "next": "14.2.13",
     "next-auth": "^5.0.0-beta.25",
+    "next-themes": "^0.4.4",
     "openai": "^4.76.0",
     "razorpay": "^2.9.4",
     "react": "^18",
