--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-hook-form": "^7.53.1",
     "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1",
+    "react-phone-number-input": "^3.4.11",
     "react-redux": "^9.2.0",
     "react-use": "^17.5.1",
     "remark-gfm": "^4.0.0",
